vendor/fixed-macro/tests/compile-fail/exp-too-big.rs
fn main() {
    fixed_macro::fixed!(123e+128: I4F4);
}
